Archive2/24/8c352c8fa60a86/output
main.cpp: In instantiation of 'class OListiterator<int>':
main.cpp:10:20:   required from here
main.cpp:5:20: error: invalid use of incomplete type 'class OList<int>'
 class OListiterator{
                    ^
main.cpp:2:7: error: declaration of 'class OList<int>'
 class OList;
       ^
main.cpp:7:30: error: invalid use of incomplete type 'class OList<int>'
     typename OList<T>::Node* iiter;
                              ^
main.cpp:2:7: error: declaration of 'class OList<int>'
 class OList;
       ^
main.cpp: In function 'int main()':
main.cpp:21:16: warning: unused variable 'olist' [-Wunused-variable]
     OList<int> olist;
                ^
